--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   height: 100vh;
 }
 
-
 #main-container {
     height: calc(100% - 80px);
     /* test */
@@ -11,10 +10,84 @@
     flex-flow: row, nowrap;
 }
 
+/* HEADER START HERE */
+
 header {
     width: 275px;
     /* test */
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    color: white;
+    
+}
+
+#logo {
+    padding: 2rem 0;
+}
+
+#logo img {
+    object-fit: cover;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    opacity: .7;
+}
+
+nav #playlist-container h3 {
+    opacity: none;
+    margin: 1em 0;
+}
+
+#header-top {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+#header-top nav ul {
+    list-style-type: none;
+}
+
+#header-top nav ul li {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    margin-top: 1em;
+}
+
+#header-top nav ul li a {
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    white-space: nowrap;
+    margin-top: .5em;
+}
+
+#header-top nav ul li img {
+    max-width: 25px;
+}
+
+#playlist-container ul {
+    list-style-type: none;
+}
+
+#create-playlist {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 1em;
+    opacity: .7;
+}
+
+#playlist-container #create-playlist .fa-solid {
+    color: white;
+    cursor: pointer;
+    font-size: 3em;
+    margin-top: 0;
 }
 
 /* MAIN START HERE */
@@ -255,19 +328,9 @@ footer {
     width: 100px;
 }
 
+/* DISPLAY MOBILE-VIEW */
 
-
-
-
-
-
-
-
-
-
-
-footer {
-    height: 80px;
+.mobile-view {
+    display: none;
     /* test */
-    background-color: #282828;
 }
