--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,10 @@ header {
     flex-direction: column;
     justify-content: space-between;
     align-content: center;
-    color: white;
-    
 }
 
 #logo {
-    padding: 2rem 0;
+    padding-top: 2rem;
 }
 
 #logo img {
@@ -35,12 +33,13 @@ header {
 nav {
     display: flex;
     flex-direction: column;
-    opacity: .7;
+    color: #5a5a5a;
 }
 
-nav #playlist-container h3 {
-    opacity: none;
+h3 {
     margin: 1em 0;
+    color: white;
+    cursor: pointer;
 }
 
 #header-top {
@@ -57,10 +56,11 @@ nav #playlist-container h3 {
     flex-wrap: nowrap;
     gap: 20px;
     margin-top: 1em;
+    cursor: pointer;
 }
 
 #header-top nav ul li a {
-    color: white;
+    color: #5a5a5a;
     cursor: pointer;
     text-decoration: none;
     white-space: nowrap;
@@ -80,14 +80,53 @@ nav #playlist-container h3 {
     flex-wrap: nowrap;
     align-items: center;
     gap: 1em;
-    opacity: .7;
+    color: #5a5a5a;
+}
+
+#create-playlist p {
+    cursor: pointer;
 }
 
 #playlist-container #create-playlist .fa-solid {
-    color: white;
     cursor: pointer;
     font-size: 3em;
     margin-top: 0;
+}
+
+#header-bottom {
+    padding: 2rem 2rem 0 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#download {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 1em;
+    align-items: center;
+}
+
+#download * {
+    cursor: pointer;
+}
+
+hr {
+    margin-top: 1em;
+}
+
+#profile {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 1em;
+}
+
+#profile-image {
+    max-height: 25px;
+    max-width: 25px;
+    height: 100%;
+    width: 100%;
 }
 
 /* MAIN START HERE */
@@ -334,3 +373,6 @@ footer {
     display: none;
     /* test */
 }
+
+/* HOVER EFFETCT */
+
